* added SUBDIRS setting.
--HG--
extra : convert_revision : 48649341d267eb35bc443f03fc61e07ef69b5d00

--- a/.hgignore
+++ b/.hgignore
@@ -1,4 +1,6 @@
 .deps
+.lo
+.o
 .pyc
 Makefile
 TAGS
@@ -10,6 +12,13 @@ config.status
 core
 onig/libtool
 onig/onig-config
+onig/sample/.libs
+onig/sample/crnl
+onig/sample/listcap
+onig/sample/names
+onig/sample/simple
+onig/sample/sql
+onig/sample/syntax
 parser.output
 stamp-h1
 yog
