* changed append_inst to add_inst.
--HG--
extra : convert_revision : 88db15ae64a2f9a19b162d90dfebf9445a6fd035

--- a/Makefile.in
+++ b/Makefile.in
@@ -1121,7 +1121,7 @@ src/keywords.inc: src/keywords
 
 src/lexer.c: parser.h
 
-src/thread.inc src/code.inc src/compile.inc: src/insts.def
+src/thread.inc src/code.inc src/compile.inc: src/insts.def tools/inst.py
 	make insts
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
