* implemented copying garbage collection.
--HG--
extra : convert_revision : c0c4dd9d59edf7ad3f7d72705d969fe855d5355c

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,8 @@ ONIG_LIB = $(ONIG_DIR)/.libs/libonig.a
 SUBDIRS = $(ONIG_DIR)
 
 bin_PROGRAMS = yog
-yog_SOURCES = src/array.c \
+yog_SOURCES = src/arg.c \
+	src/array.c \
 	src/binary.c \
 	src/block.c \
 	src/bool.c \
