* changed to set "GC" environment variable on testing.
--HG--
extra : convert_revision : dfe88c13d5c9c20642b4d5884c51e8d6e04fb70a

--- a/Makefile.in
+++ b/Makefile.in
@@ -1180,7 +1180,8 @@ am:
 	python tools/update_automake.py
 
 test: yog$(EXEEXT)
-	py.test
+	GC=COPYING py.test
+	GC=MARK-SWEEP py.test
 
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
