* changed to use BDW garbage collection.
--HG--
extra : convert_revision : ecad0f723ce1cf12e6b17ba1e864fa78a59b6825

--- a/Makefile.in
+++ b/Makefile.in
@@ -225,7 +225,7 @@ yog_SOURCES = src/arg.c \
 	src/vm.c
 
 yog_CFLAGS = -Iinclude -I$(ONIG_DIR) -I$(BDWGC_DIR)/include -Wall
-yog_LDADD = $(BDWGC_LIB) $(ONIG_LIB)
+yog_LDADD = $(BDWGC_LIB) $(ONIG_LIB) -lpthread
 AM_YFLAGS = -d --verbose
 #AM_LFLAGS = --noline
 INSTS_DEF = src/insts.def
