--- a/Makefile.in
+++ b/Makefile.in
@@ -231,6 +231,7 @@ AM_YFLAGS = -d --verbose
 INSTS_DEF = src/insts.def
 INST_PY = tools/inst.py
 INST_CMD = make insts
+GEN_AM_CMD = python tools/update_automake.py
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -1179,7 +1180,7 @@ insts:
 	python tools/inst.py src/insts.def
 
 am:
-	python tools/update_automake.py
+	$(GEN_AM_CMD)
 
 test: yog$(EXEEXT)
 	make test-copying
@@ -1214,6 +1215,9 @@ src/compile.inc: src/compile.inc.tmpl $(INSTS_DEF) $(INST_PY)
 
 include/yog/inst.h: include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
+
+Makefile.am: Makefile.am.tmpl
+	$(GEN_AM_CMD)
 
 # vim: tabstop=8 shiftwidth=8 noexpandtab filetype=automake
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
