--- a/Makefile.in
+++ b/Makefile.in
@@ -232,6 +232,7 @@ INSTS_DEF = src/insts.def
 INST_PY = tools/inst.py
 INST_CMD = make insts
 GEN_AM_CMD = python tools/update_automake.py
+TEST_CMD = py.test
 all: config.h
 	$(MAKE) $(AM_MAKEFLAGS) all-recursive
 
@@ -1188,13 +1189,13 @@ test: yog$(EXEEXT)
 	make test-bdw
 
 test-copying: 
-	GC=copying py.test
+	GC=copying $(TEST_CMD)
 
 test-mark-sweep:
-	GC=mark-sweep py.test
+	GC=mark-sweep $(TEST_CMD)
 
 test-bdw:
-	GC=bdw py.test
+	GC=bdw $(TEST_CMD)
 
 clean-generic:
 	find . -name "*.pyc" -print0 | xargs --null rm -f
